[package]
name = "lightgbm3"
version = "1.0.3"
edition = "2021"
authors = ["Dmitry Mottl <dmitry.mottl@gmail.com>", "vaaaaanquish <6syun9@gmail.com>"]
license = "MIT"
repository = "https://github.com/Mottl/lightgbm3-rs"
description = "Rust bindings for LightGBM library"
documentation = "https://docs.rs/lightgbm3/"
keywords = ["lightgbm", "machine-learning", "gradient-boosting"]
categories = ["api-bindings", "science"]
readme = "README.md"
exclude = [".gitignore", ".github", ".gitmodules", "examples", "benches", "lightgbm3-sys"]

[dependencies]
lightgbm3-sys = { path = "lightgbm3-sys", version = "1.0.3" }
libc = "0.2.155"
derive_builder = "0.20.0"
serde_json = "1.0.122"
polars = { version = "0.41.3", optional = true }

[features]
default = []
polars = ["dep:polars"]
openmp = ["lightgbm3-sys/openmp"]
gpu    = ["lightgbm3-sys/gpu"]
cuda   = ["lightgbm3-sys/cuda"]

[[bench]]
name = "regression"
path = "benches/regression.rs"
harness = false

[dev-dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
csv = "1.3.0"
